 - first wrapping implementations:
    . LBW:LaheySpace    funge98 wrapping
 - LBI->new params stricter / easier
 - requiring perl 5.10

**

4.00 <insert release date here>
 - Insert lots of nifty reorganization stuff here (jq)
 - LBV has additional rasterize method (moved and expanded from LBGSGA) (mg)
 - LBV supports accelerated rasterize method in LBVXS 1.0.1 (mg)

3.05 Tue Jan 22 17:52:27 CET 2008
 - LBV now uses an array internally for more efficiency
 - LBV tries to load transparently LBVXS for even more speed
 - LB:LaheySpace.pm now also understand \r\n and \r terminated programs
 - some tests cleaning

3.04 Wed Jan  9 17:50:58 CET 2008
 - more robust way of skipping tests when Test::Exception isn't present
   . fix t/1-classes/vector.t and t/3-lahey/generic.t
   . fix RT ticket #32164

3.03 Sun Jan  6 19:05:09 CET 2008
 - tests reorganized

3.02 Mon Nov 26 13:02:20 CET 2007
 - kwalitee/cpants release

3.01 Wed Oct 24 14:22:24 CEST 2007
 - fixing stricture

3.00 Fri Sep 28 17:41:27 CEST 2007
 - new LB::Vector class for abstracting dimension (courtesy of Mark Glines)
 - new LB::LaheySpace::Generic, a n-dims laheyspace (courtesy of Mark Glines)
 - support for n-dims
 - ops now belong to their own modules, with one test per op
 - new LB::Interpreter class to create the combination dims / ops
 - possibility to choose the set of ops: unefunge, befunge, generic-funge
 - move to lib/ layout

**

2.08 Mon May 28 19:36:11 CEST 2007
 - skipping a failing exec test on windows

2.07 Sat May 26 15:05:46 CEST 2007
 - kwalitee release: LICENSE, pod tests, etc.

2.06 Tue May  2 18:02:12 CEST 2006
 - corrected input error introduced during accessor split
 - migrated 02befunge.t, 10stdio.t and 22lib.t to Test::More
 - added tests for generic Befunge.pm test
 - added tests for output errors
 - added tests for library semantics

2.05 Mon May  1 18:34:18 CEST 2006
 - migrated 03ip.t to Test::More
 - updated 03ip.t to 100% cover L::B::IP